feat: add sanity to expore more

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
         <a  class="button"routerLink="/Bookmark">
           Bookmark
         </a>
+        <a class="button"routerLink="/sanity">
+          Movies by sanity
+        </a>
       </div>
     </div>
   </nb-layout-header>
@@ -23,7 +26,7 @@
   </nb-layout-column>
 
   <nb-layout-footer >
-    <p style="color: red; font-size: large;"> Arshdeep Singh | Demo</p>
+    <p style="color: red; font-size: large;"> Arshdeep Singh | Demo </p>
   </nb-layout-footer>
 
 </nb-layout>
