style: change color to voilet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,9 @@
+<!-- ng theme -->
 <nb-layout>
-  //ng theme
-
   <nb-layout-header fixed>
     <div class="header">
       <div class="title">
-        <h1>
-          <a routerLink="/MSearch" style="text-decoration: none; color: #fff">
-            Search Movie App
-          </a>
-        </h1>
+        <a routerLink="/MSearch"> Search Movie App </a>
       </div>
       <div>
         <a class="button" routerLink="/MSearch"> Search </a>
@@ -24,6 +19,6 @@
   </nb-layout-column>
 
   <nb-layout-footer>
-    <p style="color: red; font-size: large">Arshdeep Singh | Demo</p>
+    <p>Arshdeep Singh | Demo</p>
   </nb-layout-footer>
 </nb-layout>
