--- a/src/app/component/movie/movie.component.scss
+++ b/src/app/component/movie/movie.component.scss
@@ -12,7 +12,7 @@ nb-card-front {
   padding: 0;
 }
 .title {
-  background-color: #3d53c5;
+  background-color: #7323a1;
   color: #fff;
   text-align: center;
   font-size: xx-large;
