style: chnge color of search button

--- a/src/app/component/s-movie-search/s-movie-search.component.html
+++ b/src/app/component/s-movie-search/s-movie-search.component.html
@@ -11,7 +11,7 @@
       formControlName="movie"
       status="primary">
 
-      <button nbButton (ngSubmit)="onSubmit()" status="primary">Search</button>
+      <button  (ngSubmit)="onSubmit()" class="button">Search</button>
 
     </form>
   </nb-card-body>
