--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,9 @@
   <nb-layout-header fixed>
     <div class="header">
       <div class="title">
-        <h1>
-          <a routerLink="/MSearch" style="text-decoration: none; color: #fff">
-            Search Movie App
-          </a>
-        </h1>
+        <a routerLink="/MSearch"> Search Movie App </a>
       </div>
-      <div>
+      <div class="options">
         <a class="button" routerLink="/MSearch"> Search </a>
         <a class="button" routerLink="/Bookmark"> Bookmark </a>
         <a class="button" routerLink="/sanity"> Movies by sanity </a>
