--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,35 +1,31 @@
-.header{
+.header {
   display: flex;
-    justify-content: flex-end;
-    flex: 1;
-}
-
-.title{
+  justify-content: flex-end;
   flex: 1;
-
 }
-nb-layout-header{
+
+.title {
+  flex: 1;
+  @apply com-pt-2;
+
+  a {
+    @apply com-text-5xl com-text-white;
+  }
+}
+nb-layout-header {
   background-color: #3d53c5;
 }
 
-
-.button {
-  background: #050505;
-  border-radius: 5px;
-  color: white;
-  padding: 7px 17px;
-  text-align: center;
-  text-decoration: none ;
-  display: inline-block;
-  font-size: 20px;
-  margin: 5px;
-  margin-top: 30px;
-  cursor:pointer;
+.options {
+  .button {
+    background: #050505;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    @apply com-rounded-lg com-px-4 com-py-2 com-mr-3 com-text-xl com-font-semibold com-mt-2;
+  }
 }
-
-
-
-
-nb-layout-footer{
-  
+nb-layout-footer {
 }
