refactor: change styles and add footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <!-- ng theme -->
 <!-- <nb-layout> -->
-  <!-- <nb-layout-header> -->
-    <app-navbar></app-navbar>
-  <!-- </nb-layout-header> -->
+<!-- <nb-layout-header> -->
+<app-navbar></app-navbar>
+<!-- </nb-layout-header> -->
 
-  <!-- <nb-layout-column style="padding: 0"> -->
-    <router-outlet></router-outlet>
-  <!-- </nb-layout-column> -->
-
-  <!-- <nb-layout-footer> -->
-    <!-- <p>Arshdeep Singh | Demo</p> -->
-  <!-- </nb-layout-footer> -->
+<!-- <nb-layout-column style="padding: 0"> -->
+<router-outlet class="routes"></router-outlet>
+<!-- </nb-layout-column> -->
+<app-footer></app-footer>
+<!-- <nb-layout-footer> -->
+<!-- <p>Arshdeep Singh | Demo</p> -->
+<!-- </nb-layout-footer> -->
 <!-- </nb-layout> -->
