--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,36 +1,3 @@
-// .header {
-//   display: flex;
-//   justify-content: flex-end;
-//   flex: 1;
-// }
-
-.title {
-  flex: 1;
-  @apply com-pt-2;
-
-  a {
-    @apply com-text-5xl com-text-white;
-  }
-}
-nb-layout-header {
-  // background-color: #7323a1;
-  @apply com-bg-primary-500 ;
-}
-
-.options {
-  .button {
-    background: #050505;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    @apply com-rounded-lg com-px-4 com-py-2 com-mr-3 com-text-xl com-font-semibold com-mt-2;
-  }
-}
-
-nb-layout-footer {
-  p {
-    @apply com-text-[#7323a1] com-text-xl;
-  }
+.routes{
+  @apply com-bg-primary-100;
 }
