style: fixed navBar to top

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!-- ng theme -->
 <!-- <nb-layout> -->
 <!-- <nb-layout-header> -->
-<app-navbar></app-navbar>
+<div class="com-h-24">
+  <app-navbar></app-navbar>
+</div>
 <!-- </nb-layout-header> -->
 
 <!-- <nb-layout-column style="padding: 0"> -->
