perf: remove extra code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,7 @@
-<!-- ng theme -->
-<!-- <nb-layout> -->
-<!-- <nb-layout-header> -->
 <div class="com-h-24">
   <app-navbar></app-navbar>
 </div>
-<!-- </nb-layout-header> -->
-
-<!-- <nb-layout-column style="padding: 0"> -->
 <router-outlet></router-outlet>
-<!-- </nb-layout-column> -->
-<app-footer></app-footer>
-<!-- <nb-layout-footer> -->
-<!-- <p>Arshdeep Singh | Demo</p> -->
-<!-- </nb-layout-footer> -->
-<!-- </nb-layout> -->
+<div class="com-h-14">
+  <app-footer></app-footer>
+</div>
