--- a/src/app/component/footer/footer.component.scss
+++ b/src/app/component/footer/footer.component.scss
@@ -1,3 +1,3 @@
 .footer{
-    @apply com-fixed com-bottom-0 com-h-14 com-bg-secondary-100 com-w-full com-flex com-justify-center com-items-center com-flex-col;
+    @apply com-fixed com-bottom-0 com-bg-secondary-100 com-w-full com-flex com-justify-center com-items-center com-flex-col;
 }
