--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <div class="options">
     <a class="button" routerLink="/MSearch"> Search </a>
     <a class="button" routerLink="/Bookmark"> Bookmark </a>
-    <a class="button" routerLink="/sanity"> Movies by sanity </a>
+    <a class="button" routerLink="/sanity"> sanity </a>
     <!-- <a class="button" routerLink="/practice"> Practice </a> -->
   </div>
 </div>
