--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="title">
-    <a routerLink="/MSearch">Practice Project</a>
+    <a routerLink="/MSearch">Search Movie</a>
   </div>
   <div class="options">
     <a class="button" routerLink="/MSearch"> Search </a>
