--- a/src/app/component/s-movie-search/s-movie-search.component.html
+++ b/src/app/component/s-movie-search/s-movie-search.component.html
@@ -6,16 +6,14 @@
         placeholder="Search................"
         formControlName="movie"
       />
+      <button class="button">Search</button>
     </form>
-
-    <button (ngSubmit)="onSubmit()" class="button">Search</button>
   </div>
-
-  <div *ngIf="isLoading" class="loading-text">
-    <h1>No movie Search Yet!</h1>
-  </div>
-
-  <!-- <div *ngIf="isLoading" class="com-flex com-justify-center com-items-center com-mt-20">
+  <!-- 
+  <div
+    *ngIf="isLoading"
+    class="com-flex com-justify-center com-items-center com-mt-20"
+  >
     <div role="status">
       <svg
         aria-hidden="true"
@@ -35,9 +33,11 @@
       </svg>
     </div>
   </div> -->
-
+  <app-loading-animation *ngIf="isLoading"></app-loading-animation>
   <div class="card">
-    <app-movie *ngFor="let movie of movies | async" [movie]="movie">
-    </app-movie>
+    <app-movie *ngFor="let movie of movies" [movie]="movie"> </app-movie>
+  </div>
+  <div *ngIf="!moviesFound">
+    <h1>No Movie Found</h1>
   </div>
 </div>
