--- a/src/app/component/s-movie-search/s-movie-search.component.scss
+++ b/src/app/component/s-movie-search/s-movie-search.component.scss
@@ -2,20 +2,18 @@
   @apply com-flex com-mt-3 com-justify-center;
   form {
     input {
-      @apply  com-bg-primary-100 com-border-2 com-border-primary-500 com-text-primary-900 com-text-2xl com-px-3 com-py-2 com-rounded-t-lg com-w-[90vw];
-      @apply hover:com-bg-primary-200/70;
+      @apply com-border-0 com-border-primary-500 com-text-primary-900 com-text-2xl com-px-3 com-py-2 com-rounded-t-lg com-w-[90vw] com-border-b-2 com-bg-transparent;
+    }
+    input:focus {
+      outline: none;
     }
   }
   .button {
-    @apply  com-px-4 com-text-2xl com-text-secondary-500 com-ml-5 com-rounded-lg com-border-2 com-border-secondary-500 com-bg-primary-100;
+    @apply com-px-4 com-text-2xl com-text-secondary-500 com-ml-5 com-rounded-lg com-border-2 com-border-secondary-500 com-bg-primary-100;
     @apply hover:com-bg-primary-200;
   }
 }
 
-.loading-text{
-  @apply com-flex com-justify-center com-items-center com-h-[70vh];
-  h1{
-    @apply com-text-secondary-500 com-text-5xl;
-  }
+.card {
+  @apply com-flex com-flex-wrap com-justify-around com-my-6;
 }
-
