--- a/src/app/component/movie/movie.component.html
+++ b/src/app/component/movie/movie.component.html
@@ -1,22 +1,34 @@
-<!-- <nb-card-front> -->
-<div>
-  <nb-card class="card">
-    <nb-card-header class="title">{{ movie.Title }}</nb-card-header>
-    <nb-card-body>
-      <div class="poster">
-        <img src="{{ movie.Poster }}" alt="{{ movie.Poster }}" class="image" />
+<div
+  class="com-w-[36rem] com-mx-auto com-bg-white com-rounded-xl com-shadow-md com-overflow-hidden md:com-w-2xl com-mb-16"
+  *ngIf="movieData"
+>
+  <div class="md:com-flex">
+    <div class="md:com-flex-shrink-0">
+      <img
+        class="com-h-96 com-w-56 com-object-cover"
+        src="{{ movieData.Poster }}"
+        alt="{{ movieData.Title }}"
+      />
+    </div>
+    <div class="com-px-8 com-py-2">
+      <div
+        class="com-uppercase com-tracking-wide com-text-3xl com-text-pink-500 com-font-semibold"
+      >
+        {{ movieData.Title }}
       </div>
-      <div class="com-flex com-flex-col">
-        <p><strong>Type: </strong> {{ movie.Type | uppercase }}</p>
-        <p><strong>Year: </strong> {{ movie.Year }}</p>
+      <p class="com-mt-2 com-text-gray-500 com-line-clamp-3">{{ movieData.Plot }}</p>
+      <div class="com-mt-4">
+        <ul class="movie-info">
+          <li><strong>Type:</strong> {{ movieData.Type }}</li>
+          <li><strong>Director:</strong> {{ movieData.Director }}</li>
+          <li><strong>Language:</strong> {{ movieData.Language }}</li>
+          <li><strong>Release Date:</strong> {{ movieData.Released }}</li>
+          <li><strong>Rating:</strong> {{ movieData.imdbRating }}</li>
+        </ul>
       </div>
-    </nb-card-body>
-    <nb-card-footer class="com-flex com-justify-center com-my-3">
       <button (click)="addBookmark(movie)" class="bookmarkButton">
         Add to Bookmark
       </button>
-    </nb-card-footer>
-  </nb-card>
+    </div>
+  </div>
 </div>
-
-<!-- </nb-card-front> -->
