feat: add profile page

--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div class="footer">
-  <p>&#169;Arshdeep Singh</p>
+  <p>&#169; <a [routerLink]="['profile']">Arshdeep</a></p>
   <a [routerLink]="['practice']">@demo</a>
 </div>
