refactor: change primary and secondry color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="com-h-16">
   <app-navbar></app-navbar>
 </div>
-<router-outlet></router-outlet>
-<div class="com-h-14">
+<div class="com-min-h-screen">
+  <router-outlet></router-outlet>
+</div>
+<div>
   <app-footer></app-footer>
 </div>
