--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <div class="header">
   <div class="title">
-    <a routerLink="/MSearch">Search Movie</a>
+    <a routerLink="/Movies">Search Movie</a>
   </div>
   <div class="options">
-    <a class="button" routerLink="/MSearch"> Search </a>
-    <a class="button" routerLink="/Bookmark"> Bookmark </a>
-    <a class="button" routerLink="/sanity"> sanity </a>
+    <a class="button" routerLink="/Movies"> Search </a>
+    <!-- <a class="button" routerLink="/Bookmark"> Bookmark </a> -->
+    <!-- <a class="button" routerLink="/sanity"> sanity </a> -->
     <!-- <a class="button" routerLink="/practice"> Practice </a> -->
   </div>
 </div>
